<resources>
    <string name="app_name">CShare</string>
    <string name="title_activity_collect">CollectActivity</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_settings_item">Settings</string>
    <string name="menu_cart_item">Cart</string>
    <string name="menu_profile_item">Profile</string>
    <string name="menu_collect_item">Collect</string>
    <string name="menu_product_given_item">My given products</string>
    <string name="menu_product_collected_item">My collected products</string>
    <string name="menu_setup">Setup</string>
    <string name="menu_product">My products</string>

    <!-- Button -->
    <string name="delete_account">Delete account</string>
    <string name="edit_profile">Edit profile</string>

    <!-- Form -->
    <string name="profile_picture">Profile picture</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="campus">Campus</string>
    <string name="room_number">Room number</string>

    <!-- Tabbed Activity -->
    <string name="title_activity_cart">CartActivity</string>
    <string-array name="tab_titles">
        <item>Given</item>
        <item>Collected</item>
    </string-array>

    <!-- Array -->
    <string-array name="product_categories_array">
        <item>Féculents</item>
        <item>Fruits/Légumes</item>
        <item>Conserves/Plats cuisinés</item>
        <item>Produits laitiers</item>
        <item>Desserts/Pain</item>
        <item>Viandes/Oeufs</item>
        <item>Boissons</item>
        <item>Produits d\'hygiène</item>
        <item>Produits d\'entretien</item>
        <item>Autres</item>
    </string-array>
    <string-array name="campus_array">
        <item>Gif</item>
        <item>Rennes</item>
        <item>Metz</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Log in -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
